manifests/test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test-app
spec:
  selector:
    app: nginx
  ports:
  - port: 8080
    targetPort: 8080
